--- a/RefreshRecyclerView/src/main/res/layout/view_status_last.xml
+++ b/RefreshRecyclerView/src/main/res/layout/view_status_last.xml
@@ -30,7 +30,7 @@
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:gravity="center"
-        android:text="没有更多了O(∩_∩)O~"
+        android:text="—— 没有更多了 ——"
         android:textSize="14sp"
         android:visibility="gone" />
 
